[tool.poetry]
name = "diary-app"
version = "0.1.0"
description = ""
authors = ["Carlos Paiva <paivakk22@gmail.com>"]
readme = "README.md"
packages = [{include = "diary_app"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.0"


[tool.poetry.group.dev.dependencies]
fastapi = "^0.85.1"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
requests = "^2.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
